Umas alterações ai